<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSP Testeur</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="title_login">Identification</string>
    <string name="title_activity_my_groups">Mes groupes</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="expenses">dépenses</string>
    <string name="balances">soldes</string>
    <string name="transfers">virements</string>

    <string name="create_group">Créer un groupe</string>

    <string name="edit_group_name">Nom du groupe</string>
    <string name="edit_group_nb_parts">Nombre de part minimal</string>

    <string name="edit_expense">Modif. dépense</string>
    <string name="edit_expense_new_expense">Nouvelle dépense</string>
    <string name="edit_expense_name">Nom de la dépense</string>
    <string name="edit_expense_amount">Montant</string>
    <string name="edit_expense_euro">€</string>
    <string name="edit_expense_paid_by">payés par</string>
    <string name="edit_expense_update_expense_ok">Dépense mise à jour</string>
    <string name="edit_expense_create_expense_ok">Dépense créée</string>
    <string name="edit_expense_incorrect_amount">Montant incorrect</string>
    <string name="edit_expense_name_too_short">Nom trop court</string>

    <string name="add_friend_title">Ajouter un ami</string>
    <string name="add_friend_autocomplete_hint">nom</string>
    <string name="add_friend_already_participates">Cet ami participe déjà…</string>
    <string name="add_friend_adding_to_participation">Ok, il existe déjà et sera ajouté aux participants.</string>
    <string name="add_friend_creating_and_adding_friend">Cet ami sera créé et ajouté à la dépense.</string>
    <string name="add_friend_bad_nickname_not_enough_chars">Le nom de votre ami est incorrect : il ne contient pas assez de caractères.</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">ANNULER</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>

</resources>
