<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="placard.fr.eu.chacunsapart.ui.EditGroupActivity"
    android:orientation="vertical"
    >

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/edit_group_name_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<AutoCompleteTextView-->
            <!--android:id="@+id/edit_group_name_tv"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/edit_group_name"-->
            <!--android:layout_marginTop="45dp"-->
            <!--/>-->
    <!--</android.support.design.widget.TextInputLayout>-->

    <EditText
        android:id="@+id/edit_group_name_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_group_name"
        android:textSize="30sp"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_group_nb_parts"
            android:textSize="18sp"
           />
        <Spinner
            android:id="@+id/edit_group_parts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </Spinner>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <Button
            android:id="@+id/edit_group_ok_btn"
            android:layout_marginRight="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            />
        <Button
            android:id="@+id/edit_group_cancel_btn"
            android:layout_marginRight="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>
