<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="placard.fr.eu.org.ui.EditGroupActivity"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/edit_group_name_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<AutoCompleteTextView-->
    <!--android:id="@+id/edit_group_name_tv"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/edit_group_name"-->
    <!--android:layout_marginTop="45dp"-->
    <!--/>-->
    <!--</android.support.design.widget.TextInputLayout>-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >
    <EditText
        android:id="@+id/edit_expense_name_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_expense_name"
        android:textSize="25sp"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/edit_expense_amount_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_expense_amount"
            android:textSize="20sp"
            android:singleLine="true"
            android:gravity="right"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/edit_expense_euro"
            android:layout_marginRight="5sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_expense_paid_by"
            />
        <Spinner
            android:id="@+id/edit_expense_payer_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></Spinner>

    </LinearLayout>


    <ListView
        android:id="@+id/edit_expense_participations_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>


</LinearLayout>
</LinearLayout>
    <android.support.design.widget.FloatingActionButton
    android:id="@+id/edit_expense_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="0dp"
    app:backgroundTint="@color/csp_green"
    android:src="@drawable/icplus"
    />
</RelativeLayout>